# verilog-playground

./: .gitignore  CLAUDE.md  Makefile  README.md  pixi.toml  project.tcl
fpga.srcs/constrs_1/new/: nexys_a7_100t.xdc
fpga.srcs/sources_1/new/: bcd_encoder.sv  blinky.sv  config.svh  debounce.sv  hunt_the_bit.sv  priority_encoder.sv  reset_gen.sv  tb_blinky.sv  tb_reset_gen.sv  top.sv
scripts/: build.tcl  program.tcl  vproj
scripts/vproj/: pyproject.toml
scripts/vproj/src/vproj/: __init__.py  board.py  build.py  clean.py  cli.py  cli_utils.py  constants.py  context.py  daemon.py  hooks.py  logs.py  messages.py  output.py  part.py  program.py  progress.py  project.py  server.tcl  sim.py  tcl_export.py  tcl_import.py  utils.py  vivado.py
src/sources/: bcd_to_seven_segment.sv  debounce.sv  hunt_the_bit.sv  priority_encoder.sv  reset_gen.sv  seven_segment.sv  top.sv
src/sources/hunt_the_bit/: hunt_the_bit.sv  hunt_the_bit_top.sv
src/sources/serial/: baud_gen.sv
src/sources/system/: constants.sv
src/testbench/: tb_hunt_the_bit.sv  tb_reset_gen.sv
tests/: coco_helper.py  conftest.py  test_bcd_encoder.py  test_bcd_to_seven_segment.py  test_serial_baud_gen.py
